--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.1.0
 plotly == 5.3.1
 pandas==1.2.4
 requests==2.26.0
-pymongo == 3.11.0
+pymongo[srv] == 3.11.0
 Flask==1.1.1
 Flask_Cors==3.0.8
 gunicorn==20.1.0
